--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,17 @@
 			<id>nexus-snapshots</id>
 			<url>http://localhost:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
+		<repository>
+			<id>nexus-release</id>
+			<url>http://localhost:8081/nexus/content/repositories/releases/</url>
+		</repository>
 	</distributionManagement>
+
+	<scm>
+		<connection>scm:git@github.com:ialserda-matrik/teaching-academy.git</connection>
+		<developerConnection>scm:git@github.com:ialserda-matrik/teaching-academy.git</developerConnection>
+		<url>scm:git@github.com:ialserda-matrik/teaching-academy.git</url>
+	</scm>
 
 	<build>
 		<pluginManagement>
@@ -110,6 +120,15 @@
 							<version>2.6</version>
 						</dependency>
 					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.5.3</version>
+					<configuration>
+						<tagNameFormat>v@{project.version}</tagNameFormat>
+						<autoVersionSubmodules>true</autoVersionSubmodules>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
