--- a/pom.xml
+++ b/pom.xml
@@ -84,9 +84,9 @@
 	</distributionManagement>
 
 	<scm>
-		<connection>scm:git@github.com:ialserda-matrik/teaching-academy.git</connection>
-		<developerConnection>scm:git@github.com:ialserda-matrik/teaching-academy.git</developerConnection>
-		<url>scm:git@github.com:ialserda-matrik/teaching-academy.git</url>
+		<connection>scm:git:ssh://git@github.com:ialserda-matrik/teaching-academy.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:ialserda-matrik/teaching-academy.git</developerConnection>
+		<url>scm:git:ssh://git@github.com:ialserda-matrik/teaching-academy.git</url>
 	</scm>
 
 	<build>
