--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.teachingacademy.academy</groupId>
 	<artifactId>academy-parent</artifactId>
-	<version>2.0.6-RELEASE</version>
+	<version>2.0.6-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Teaching Academy Parent</name>
 	<description>Teaching Academy Application - Parent Module</description>
@@ -86,8 +87,7 @@
 		<connection>scm:git:ssh://git@github.com:ialserda-matrik/teaching-academy.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:ialserda-matrik/teaching-academy.git</developerConnection>
 		<url>scm:git:ssh://git@github.com:ialserda-matrik/teaching-academy.git</url>
-	  <tag>v2.0.6-RELEASE</tag>
-  </scm>
+	</scm>
 
 	<build>
 		<pluginManagement>
