--- a/pom.xml
+++ b/pom.xml
@@ -84,10 +84,10 @@
 	</distributionManagement>
 
 	<scm>
-		<connection>scm:git:ssh://git@github.com:ialserda-matrik/teaching-academy.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com:ialserda-matrik/teaching-academy.git</developerConnection>
-		<url>scm:git:ssh://git@github.com:ialserda-matrik/teaching-academy.git</url>
-	</scm>
+        <connection>scm:git@github.com:ialserda-matrik/teaching-academy.git</connection>
+        <developerConnection>scm:git@github.com:ialserda-matrik/teaching-academy.git</developerConnection>
+        <url>scm:git@github.com:ialserda-matrik/teaching-academy.git</url>
+    </scm>
 
 	<build>
 		<pluginManagement>
