--- a/pom.xml
+++ b/pom.xml
@@ -85,9 +85,9 @@
 
 
 	<scm>
-        <connection>scm:git@github.com:ialserda-matrik/teaching-academy.git</connection>
-        <developerConnection>scm:git@github.com:ialserda-matrik/teaching-academy.git</developerConnection>
-        <url>scm:git@github.com:ialserda-matrik/teaching-academy.git</url>
+        <connection>scm:git:git@github.com:ialserda-matrik/teaching-academy.git</connection>
+        <developerConnection>scm:git:git@github.com:ialserda-matrik/teaching-academy.git</developerConnection>
+        <url>scm:git:git@github.com:ialserda-matrik/teaching-academy.git</url>
     </scm>
 
 	<build>
